--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Wuhan, China"
-  employer         : "Red Brick University"
+  employer         : "X University"
   uri              : # URL
   email            : "none@example.org" 
 
